# rpgsim

./: GAME_CONCEPT_SUMMARY.md  Relational Primitives.md  cleanup_filenames.ps1  curriculumGuide.md  forest-ecosystem.json  game_concept.md  jsonl_to_json.ps1  referenceGuide.md  rp_rule_engine_overview.md  rpe.md  rpgsimoverview.md
Relational Primitives/: CT translation.md  Cognitive Signature Capture An Unnamed Threat.md  Conav readme.md  Conversational Demonstration.md  Derivation deep dive.md  E^2 Equation.md  Ecosystem demo.md  GCO Log Synthesis.md  GCO logic.md  Global Closure Operator.md  MRIE.md  Meta-relational Identity exposure (MRIE) Synthesis.md  RP Lambda Calc Translation.md  Relational Bill of Rights v2.md  Relational Bill of Rightsv1.md  Relational Ontology Derived from First Principles.md  Relational Primitives V3.md  Relational Primitives.md  Rplang.md  The Stewardship Architecture A Summary.md
data/: README.md  test.jsonl  train.jsonl
examples/: minimal_rp_sim.py
game/: .gitignore  BUILD.md  CMakeLists.txt  GETTING_STARTED.md  README.md  STATUS.md
game/docs/: QUICK_REFERENCE.md  RELATIONAL_PRIMITIVES.md
game/examples/: ecosystem_demo.cpp
game/include/core/: World.h
game/include/rules/: ForestRules.h
game/include/utils/: JsonLoader.h
game/src/core/: RPEngine.cpp
game/src/spatial/: SpatialIndex.cpp
idea/: Base Power Element ec5b4a38aead4aae961f019b41fbdbf4.md  Blurb 45213b297c6b4bbf9b1929b63ea2e43e.md  Characters 6b1530e193334b43b4cea14a3dc50258.md  Entities 40a5bfbcd7e14320a5abd83f98e41fda.md  Magic e8cf2b0d2d4343a6b85482b1811a429a.md  (+9 more)
(+76 files in other folders)
